CNAME and new post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,15 @@
   <head>
     <title>{{ page.title }}</title>
     <link href="/assets/css/main.css" rel="stylesheet" type="text/css">
-    {{* <link href="//feeds.feedburner.com/KarlSeguinsBlog" rel="alternate" type="application/atom+xml" /> *}}
+    <link href="/atom.xml" rel="alternate" type="application/atom+xml" />
     <link href="/assets/css/shcore.css" rel="stylesheet" type="text/css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js" type="text/javascript"></script>
     <script src="/assets/js/shCore.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="header">
-      <div id="title"><a href="/">Hello.</a></div>
-      <a href="//feeds.feedburner.com/KarlSeguinsBlog"><img id="rss" src="/assets/i/rss.png" width="32" height="32" alt="rss" /></a>
+      <div id="title"><a href="/">Digitally-Bright</a></div>
+      <a href="/atom.xml"><img id="rss" src="/assets/i/rss.png" width="32" height="32" alt="rss" /></a>
     </div>
      <div id="site">
         <div id="left">
