--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
  <div id="date">{{ page.date | date_to_string }}</div>
 {{ content }}
 <br />
-{{ page.content | number_of_words }}
+<!-- {{ page.content | number_of_words }} -->
 </div>
 
 <div class="section">
@@ -16,6 +16,19 @@ layout: default
 </div>
 
 <script type="text/javascript">
+$(document).ready(function() {
+  SyntaxHighlighter.defaults['wrap-lines'] = false;
+  SyntaxHighlighter.defaults['toolbar'] = false;
+  SyntaxHighlighter.autoloader(
+    'css  /assets/js/shBrushCss.js',
+    'js  /assets/js/shBrushJScript.js',
+    'plain text  /assets/js/shBrushPlain.js',
+    'ruby rails  /assets/js/shBrushRuby.js',
+    'xml html xhtml  /assets/js/shBrushXml.js'
+  );
+  SyntaxHighlighter.all();
+});
+
 var disqus_identifier = {% if page.disqus_id %}{{ page.disqus_id }};{% else %}'{{ page.url }}';{% endif %}
 (function() {
  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
