--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,22 @@
 <html>
   <head>
     <title>{{ page.title }}</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="/assets/css/main.css" rel="stylesheet" type="text/css">
     <link href="/atom.xml" rel="alternate" type="application/atom+xml" />
     <link href="/assets/css/shcore.css" rel="stylesheet" type="text/css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js" type="text/javascript"></script>
     <script src="/assets/js/shCore.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-6423582-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
     <div id="header">
@@ -25,4 +36,3 @@
      </div>
   </body>
 </html>
-
