Change blog title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,13 @@
   </head>
   <body>
     <div id="header">
-      <div id="title"><a href="/">Digitally-Bright</a></div>
+      <div id="title"><a href="/">Oleg Fedoseev</a></div>
       <a href="/atom.xml"><img id="rss" src="/assets/i/rss.png" width="32" height="32" alt="rss" /></a>
     </div>
      <div id="site">
         <div id="left">
           <!-- <p><a href="/about.html">about</a></p> -->
-          <p><a href="//github.com/aryoh">github</a></p>
+          <p><a href="//github.com/olegfedoseev">github</a></p>
           <p><a href="//twitter.com/olegfedoseev">twitter</a></p>
           <p><a href="mailto:oleg.fedoseev@me.com">email</a></p>
           {% if page.url != '/index.html' %}<p><a href="/">home</a></p>{% endif %}
